# smol-evm

./: .gitignore  .gitmodules  CONTRIBUTING.md  LICENSE  README.md  create2.py  pyproject.toml  raw_deployer.py
.github/: CODEOWNERS
.github/workflows/: pytest.yaml
corruptions/: Corruptions.sol  CorruptionsMetadata.sol  corruption.py
examples/: just-mul.easm  memhook.py  mul-return.easm  store-return.easm  w1nt3r-runner.py
examples/huff/: addTwo.huff  addTwo.toml
scripts/: create2.py  dispatch-explorer.py  dispatch_explorer.py  get_historical_logs.py  get_messages.py  raw_deployer.py
scripts/corruptions/: corruption.py
src/: cli.py  disasm.py  huff-runner.py  main.py
src/smol_evm/: constants.py  context.py  exceptions.py  memory.py  opcodes.py  runner.py  stack.py  utils.py
src/yolo_evm/: constants.py  context.py  exceptions.py  memory.py  opcodes.py  runner.py  stack.py
tests/: shared.py  test_arithmetic.py  test_bitwise.py  test_calldata.py  test_comparison.py  test_context.py  test_disasm.py  test_jumps.py  test_memory.py  test_sha3.py  test_stack.py  test_storage.py
