[tool.poetry]
name = "smol-evm"
version = "0.1.0"
description = ""
authors = ["karmacoma <karmacoma.eth@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
