[tool.poetry]
name = "smol-evm"
version = "0.1.0"
description = ""
authors = ["karmacoma <karmacoma.eth@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
eth-utils = {version = "^2.0.0", extras = ["pycryptodome"]}
pycryptodome = "^3.15.0"
tomlkit = "^0.11.5"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
